# CTest suite for the IMU detector + I/O worker + ESKF gyro-unit pin.
# Self-contained — NOT part of the app build. Runs two ways:
#
#   Standalone (fast single-suite iteration):
#     cmake -S src/IMU/tests -B build/imu-tests
#     cmake --build build/imu-tests -j && ctest --test-dir build/imu-tests --output-on-failure
#
#   Under the umbrella (all suites at once):
#     cmake -S tests -B build/tests && cmake --build build/tests -j && ctest --test-dir build/tests
#
# Shared infra (Qt prefix, Eigen locate, sanitizers, pp_add_test) lives in
# tests/cmake/PinPointTests.cmake. -DPP_SANITIZE=thread builds the suite under TSan.

# Standalone bootstrap: pull in the shared module when configured on our own.
# Under the umbrella pp_add_test already exists, so this block is skipped.
if(NOT COMMAND pp_add_test)
    cmake_minimum_required(VERSION 3.16)
    project(pinpoint_imu_tests LANGUAGES CXX)
    list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/../../../tests/cmake)
    include(PinPointTests)
    enable_testing()
endif()

set(IMU ${CMAKE_CURRENT_SOURCE_DIR}/..)   # src/IMU

# ── Impact-detector truth table ──────────────────────────────────────────────
# strike fires once; mat tap / waggle / slow swell rejected; refractory;
# orientation gate; back-dated est_t; 100↔200 Hz rate independence.
# impact_detector.h is pure math (<cmath>/<array>); no BLE, no app build.
pp_add_test(impact_detector_test
    SOURCES impact_detector_test.cpp
    STD 20)

# ── ImuIoWorker (IMU I/O thread migration, stage W0) ─────────────────────────
# The per-packet hot path extracted from ImuInstance, validated across real
# threads against the real EventBuffer: snapshot coherence, atomic calibration
# swap, ring writes + the detachBuffer stop barrier, impact detection with a
# deterministic clock, attach/detach/deregister churn. event_buffer.h →
# swing_window.h uses std::span, so this target needs C++20.
#
# The real lock-free EventBuffer is the `pinpoint_buffer` library. Under the
# umbrella that target is already added; standalone we add it ourselves (its own
# tests stay out — they are PROJECT_IS_TOP_LEVEL-gated).
if(NOT TARGET pinpoint_buffer)
    add_subdirectory(${PP_BUFFER} ${CMAKE_BINARY_DIR}/_imu_buffer)
endif()

pp_add_test(imu_io_worker_test
    SOURCES imu_io_worker_test.cpp ${IMU}/imu_io_worker.cpp
    INCLUDE ${IMU}
    LINK    pinpoint_buffer
    STD 20  AUTOMOC)

# ── EskfOrientationFilter gyro-unit pin (R2-7) ───────────────────────────────
# Pins the rad/s gyro convention through the vendored ESKF (correctGyr converts
# deg/s internally; the adapter pre-scales rad→deg). Needs Eigen + the vendored
# imu_ekf headers. pp_find_eigen() locates Eigen on every platform (was a
# hardcoded Linux build-dir path before, so this test was silently skipped on
# macOS).
pp_find_eigen(EIGEN_DIR)
pp_add_test(eskf_gyro_units_test
    SOURCES eskf_gyro_units_test.cpp ${IMU}/eskf_orientation_filter.cpp
    INCLUDE ${IMU} ${EIGEN_DIR}
            ${PP_THIRD}/imu_ekf_compat   # <Eigen.h>/<Wire.h> shims — MUST precede imu_ekf
            ${PP_THIRD}/imu_ekf          # ESKF.h, Quaternion.h
    STD 20)
